@@ -1,3 +1,14 @@
+2002-06-02  Tushar Samant <scribble@pobox.com>
+
+	* [w3m-dev-en 00748] PATCH: Reinitialize w3m while running
+	* funcname.tab (INIT_MAILCAP): deleted
+		(REINIT): added
+	* main.c (config_filename): added
+		(reinit): added
+	* proto.h (reinit): added
+	* rc.c (rc_initialized): deleted
+	* w3mhelperpanel.c (editMailcap): use REINIT MAILCAP
+
 2002-06-02  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* [w3m-dev 03200] Re: New configuration option ``keymap_file'' and new command ``DEFINE_KEY''
